# rust_archiver

./: .gitignore  Cargo.toml  README.md  bacon.toml
a_temp_crates/.new_src/: main.rs
a_temp_crates/.new_src/core_dep/src/interface/: cli_interface.rs  mod.rs
a_temp_crates/.new_src/core_dep/src/utils/: mod.rs  utilities.rs
a_temp_crates/.old.temp/interface/: interface_builder.rs  mod.rs
core_deps/: Cargo.toml
core_deps/src/: lib.rs  mod.rs
core_deps/src/interface/: interface_builder.rs  mod.rs
src/: main.rs
src/interface/: interface_builder.rs  interface_parser.rs  mod.rs
src/processing/: archiver_legacy.rs  async_archiver.rs  mod.rs  new_archiver.rs
src/structs/: config.rs
src/utils/: mod.rs
src_new/core_dep/: Cargo.toml
src_new/core_dep/src/interface/: helpder_structs.rs
