[package]
name = "rust_archiver"
version = "0.1.0"
edition = "2021"
authors = ["Blake@129040985+MrDwarf7@users.noreply.github.com."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.31"
chrono-tz = "0.8.5"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
emojis = "0.6.1"
rayon = "1.8.0"
# structopt = "0.3.26"
# smol = "2.0.0"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"
