[package]
name = "core_deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.31"
emojis = "0.6.1"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"
